--- a/original-version/index.html
+++ b/original-version/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -6,62 +7,65 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Black+Ops+One|Nanum+Gothic" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
-    <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Knockout Fitness</title>
 </head>
 
 <body>
 
-    <div class="wrapper-page">
+    <div class="container-fluid">
 
-        <div class="header-section">
-            <div class="social-1">
+        <div class="row">
+            <header class="col-lg-12">
                 <i class="fas fa-envelope fa-2x"></i>
                 <i class="fab fa-facebook-square fa-2x"></i>
-            </div>
-            <div class="logo">
                 <img src="./assets/images/9596014.png" alt="" class="src">
-            </div>
-            <div class="social-2">
                 <i class="fab fa-twitter-square fa-2x"></i>
                 <i class="fab fa-instagram fa-2x"></i>
+            </header>
+        </div>
+
+        <div class="row">
+            <div class="col-lg-12" id="nav-area">
+                <ul>
+                    <li>
+                        <a href="index.html">Home</a>
+                    </li>
+                    <li>
+                        <a href="coaches.html">Coaches</a>
+                    </li>
+                    <li>
+                        <a href="schedule.html">Schedule</a>
+                    </li>
+                    <li>
+                        <a href="location.html">Location</a>
+                    </li>
+                    <li>
+                        <a href="photos.html">Photo Gallery</a>
+                    </li>
+
+                </ul>
+
             </div>
         </div>
 
-        <div class="nav-section">
-            <ul>
-                <li>
-                    <a href="index.html">Home</a>
-                </li>
-                <li>
-                    <a href="coaches.html">Coaches</a>
-                </li>
-                <li>
-                    <a href="schedule.html">Schedule</a>
-                </li>
-                <li>
-                    <a href="location.html">Location</a>
-                </li>
-                <li>
-                    <a href="photos.html">Photos</a>
-                </li>
-            </ul>
+        <div class="row" id="hero-wrapper">
+            <div class="col-lg-12" id="hero-banner">
+                <div id="quote">
+                    <h2>Rise above your past to begin your future.</h2>
+                </div>
+            </div>
+
         </div>
 
-        <div class="hero-section">
-            <div id="quote">
-                <h2>Rise above your past to begin your future.</h2>
-            </div>
-        </div>
-
-        <div class="section section-img-l" id="welcome">
-            <div class="home-image">
-                <img src="./assets/images/building_dark.JPG" alt="Welcome" class="src">
-            </div>
-            <div class="home-content">
-                <h3 class="section-title" id="welcome-header">Welcome</h3>
+        <div class="row" id="section-1-wrapper">
+            <div class="offset-lg-1 col-lg-10 section" id="section-1">
+                <div id="building-front">
+                    <img src="./assets/images/building_dark.JPG" alt="" class="src" height=400>
+                </div>
+                <h3 class="section-title">Welcome</h3>
                 <p>
                     Knockout Fitness provides kickboxing, Muay Thai, MMA and personal training for adults and children, as well as nutritional
                     counseling and supplements. Students burn calories and get in shape as they sweat through kickboxing
@@ -70,24 +74,24 @@
             </div>
         </div>
 
-        <div class="section section-img-r" id="muay-thai">
-            <div class="home-content">
+        <div class="row" id="section-2-wrapper">
+            <div class="offset-lg-1 col-lg-10 section" id="section-2">
+                <div id="muay-thai">
+                    <img src="./assets/images/slideshow/9165834.png" alt="" class="src" height=300>
+                </div>
                 <h3 class="section-title">Muay Thai</h3>
                 <p>
                     Fast-Paced And Difficult To Master, Muay Thai Is One Of Thailand's Proudest Traditions. Read On For A Basic Overview Of This
                     Centuries-Old Martial Art.
                 </p>
             </div>
-            <div class="home-image">
-                <img src="./assets/images/slideshow/9165834.png" alt="Muay Thai" class="src">
-            </div>
         </div>
 
-        <div class="section section-img-l" id="grappling">
-            <div class="home-image">
-                <img src="./assets/images/IMG_2513.JPG" alt="Grappling" class="src">
-            </div>
-            <div class="home-content">
+        <div class="row" id="section-3-wrapper">
+            <div class="offset-lg-1 col-lg-10 section" id="section-3">
+                <div id="grappling-photo">
+                    <img src="./assets/images/IMG_2513.JPG" alt="" class="src" height=300>
+                </div>
                 <h3 class="section-title">Grappling</h3>
                 <p>
                     In hand-to-hand combat, grappling is a close fighting technique used to gain a physical advantage such as improving relative
@@ -97,35 +101,39 @@
             </div>
         </div>
 
-        <div class="section section-img-r" id="sparring">
-            <div class="home-content">
+        <div class="row" id="section-4-wrapper">
+            <div class="offset-lg-1 col-lg-10 section" id="section-4">
+                <div id="sparring-photo">
+                    <img src="./assets/images/IMG_2526.JPG" alt="" class="src" height=300>
+                </div>
                 <h3 class="section-title">Sparring</h3>
                 <p>
                     Sparring is a form of training common to many combat sports. Although the precise form varies, it is essentially relatively
                     'free-form' fighting, with enough rules, customs, or agreements to make injuries unlikely.
                 </p>
             </div>
-            <div class="home-image">
-                <img src="./assets/images/IMG_2526.JPG" alt="Sparring" class="src">
-            </div>
         </div>
 
-        <div class="section section-img-l" id="children">
-            <div class="home-image">
-                <img src="./assets/images/IMG_2485.JPG" alt="Children's Class" class="src">
-            </div>
-            <div class="home-content">
+        <div class="row" id="section-5-wrapper">
+            <div class="offset-lg-1 col-lg-10 section" id="section-5">
+                <div id="children-photo">
+                    <img src="./assets/images/IMG_2485.JPG" alt="" class="src" height=300>
+                </div>
                 <h3 class="section-title">Children's Classes</h3>
-                <p id="test">
+                <p>
                     Sparring is a form of training common to many combat sports. Although the precise form varies, it is essentially relatively
                     'free-form' fighting, with enough rules, customs, or agreements to make injuries unlikely.
                 </p>
             </div>
         </div>
 
-        <div class="footer-section">
-            <h5>&copy; 2018 Knockout Fitness</h5>
+        <div class="row" id="footer-wrapper">
+            <div class="offset-lg-1 col-lg-10" id="footer">
+                <h5>&copy; 2018 Knockout Fitness</h5>
+            </div>
         </div>
+
+
 
     </div>
 
