--- a/schedule.html
+++ b/schedule.html
@@ -6,74 +6,61 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Black+Ops+One|Nanum+Gothic" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
+    <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Knockout Fitness</title>
 </head>
 
 <body>
 
-    <div class="container-fluid">
+    <div class="wrapper-page">
 
-        <div class="row">
-            <header class="col-lg-12">
+        <div class="header-section">
+            <div class="social-1">
                 <i class="fas fa-envelope fa-2x"></i>
                 <i class="fab fa-facebook-square fa-2x"></i>
+            </div>
+            <div class="logo">
                 <img src="./assets/images/9596014.png" alt="" class="src">
+            </div>
+            <div class="social-2">
                 <i class="fab fa-twitter-square fa-2x"></i>
                 <i class="fab fa-instagram fa-2x"></i>
-            </header>
-        </div>
-
-        <div class="row">
-            <div class="col-lg-12" id="nav-area">
-                <ul>
-                    <li>
-                        <a href="index.html">Home</a>
-                    </li>
-                    <li>
-                        <a href="coaches.html">Coaches</a>
-                    </li>
-                    <li>
-                        <a href="schedule.html">Schedule</a>
-                    </li>
-                    <li>
-                        <a href="location.html">Location</a>
-                    </li>
-                    <li>
-                        <a href="photos.html">Photo Gallery</a>
-                    </li>
-
-                </ul>
-
             </div>
         </div>
 
-        <div class="row" id="main-wrapper">
-            <div class="offset-lg-1 col-lg-10 iframe-map" id="calendar-embed">
+        <div class="nav-section">
+            <ul>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="coaches.html">Coaches</a>
+                </li>
+                <li>
+                    <a href="schedule.html">Schedule</a>
+                </li>
+                <li>
+                    <a href="location.html">Location</a>
+                </li>
+                <li>
+                    <a href="photos.html">Photos</a>
+                </li>
+            </ul>
+        </div>
+
+
+        <div class="iframe-map" id="calendar-embed">
                 <iframe src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showNav=0&amp;showDate=0&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;showTz=0&amp;mode=WEEK&amp;height=600&amp;wkst=1&amp;bgcolor=%23000000&amp;src=bagglerock%40gmail.com&amp;color=%231B887A&amp;ctz=America%2FNew_York"
                     style="border:solid 2px #777" frameborder="0" scrolling="no"></iframe>
             </div>
 
+
+
+        <div class="footer-section">
+            <h5>&copy; 2018 Knockout Fitness</h5>
         </div>
-
-        <div class="row" id="section-1-wrapper">
-            <div class="offset-lg-1 col-lg-10" id="section-1">
-                <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem ut consequuntur tempore, et excepturi dolor asperiores
-                    doloremque assumenda rerum qui aliquid non dolores est ratione magni earum voluptas ducimus repellat.
-                </p>
-            </div>
-        </div>
-
-        <div class="row" id="footer-wrapper">
-            <div class="offset-lg-1 col-lg-10" id="footer">
-                <h5>&copy; 2018 Knockout Fitness</h5>
-            </div>
-        </div>
-
-
 
     </div>
 
