--- a/index.html
+++ b/index.html
@@ -138,9 +138,9 @@
             <div class="home-content">
                 <h3 class="section-title">Sparring</h3>
                 <p>
-                    Sparring sharpens and develops techniques while completely conditioning your body for sport combat
-                    as well as self defense. More importantly it can teach you the importance of timing
-                    and judgment of distance in relation to your offensive and defensive techniques.
+                    Sparring sharpens and develops techniques while completely conditioning your body for sport combat as well as self defense.
+                    More importantly it can teach you the importance of timing and judgment of distance in relation to your
+                    offensive and defensive techniques.
                 </p>
             </div>
             <div class="home-image">
@@ -149,16 +149,26 @@
         </div>
 
         <div class="footer-section">
-            <div>
+            <div class="footer-logo">
                 <img src="./assets/images/9596014.png" alt="" class="src">
             </div>
-            <div>
+            <div class="footer-info">
+                <h4>Phone Numbers:</h4>
                 <ul>
-                    <li>Phone: </li>
-                    <li>Address: </li>
-                    <li>Facebook: </li>
-                    <li>Instagram: </li>
-                    <li>Email: </li>
+                    <li>Jim Walters - 732-598-7167</li>
+                    <li>Linda Walters - 732-841-8886</li>
+                </ul>
+                <ul>
+                    <li>Address: NJ-88, Brick, NJ 08724</li>
+                    <li>
+                        <a href="https://www.facebook.com/KnockOutFitnessNj/" target="_blank">
+                            <i class="fab fa-facebook-square fa-2x"></i>
+                        </a>
+                        <a href="https://www.instagram.com/explore/locations/286685818/knock-out-fitness-muay-thai/" target="_blank">
+                            <i class="fab fa-instagram fa-2x"></i>
+                        </a>
+                    </li>
+                    <li><a href="mailto:combatkickboxing27@yahoo.com">Email: combatkickboxing27@yahoo.com</a></li>
                 </ul>
             </div>
         </div>
